feat: add initial styles, header layout, and plan plus benefits section
- Applied basic CSS styles to the web page.
- Implemented header with structured layout and styling.
- Created a new section showcasing plan plus benefits using an image gallery.

Additional notes:
- The gallery visually highlights the perks of subscribing to the plan plus.
- Styling aims to improve readability and user experience across sections.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Gallery</title>
 </head>
 <body>
@@ -11,19 +12,29 @@
             <h1 class="description__title">Galeria con las mejores imagens y mejor calidad para tu negocio</h1>
             <p class="description__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui maiores dolores sapiente debitis voluptas dolor laudantium enim    porro modi magni, quas optio, laboriosam reiciendis temporibus nemo molestiae voluptatum illo unde.</p>
         </section>
-        <img class="header__img" src="" alt="">
     </header>
 
     <main class="paid-plans">
         <div class="paid-plans__desc">
-
+            <h2 class="desc__title">Obten el nivel plus</h2>
         </div>
         <div class="paid-plans__benefits">
-            <div class="benefits__container"><img src="" alt="" class="benefits__img"></div>
-            <div class="benefits__container"><img src="" alt="" class="benefits__img"></div>
-            <div class="benefits__container"><img src="" alt="" class="benefits__img"></div>
-            <div class="benefits__container"><img src="" alt="" class="benefits__img"></div>
-            <div class="benefits__container"><img src="" alt="" class="benefits__img"></div>
+            <div class="benefits__item item1">
+                <h3 class="benefits__desc">Mejor calidad</h3>
+                <img class="benefits__img" src="asserts/auto.jpg" alt="">
+            </div>
+            <div class="benefits__item item2">
+                <h3 class="benefits__desc">Descargas Ilimitadas</h3>
+                <img class="benefits__img" src="asserts/auto-hojas.jpg" alt="">
+            </div>
+            <div class="benefits__item item3">
+                <h3 class="benefits__desc">Contenido exlcusivo</h3>
+                <img class="benefits__img" src="asserts/marAzul.jpg" alt="">
+            </div>
+            <div class="benefits__item item4">
+                <h3 class="benefits__desc">Espacio de edicion exlcusivo</h3>
+                <img class="benefits__img img__item4" src="asserts/astronauta.png" alt="">
+            </div>
         </div>
     </main>
 
