feat(images): add new images for nature, animals and architecture categories

--- a/index.html
+++ b/index.html
@@ -65,132 +65,132 @@
 
     <section class="gallery">
         <a class="gallery__item " href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/cool-escalera-con-luces-en-un-edificio-moderno.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Arquitectura</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/hermoso-paisaje-de-un-rio-rodeado-de-vegetacion-en-un-bosque.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Naturaleza</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/iguana-verde-closeup-en-madera-animal-closeup-reptil-closeup.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Animales</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/vista-posterior-de-un-hombre-con-sombrero-trabajando-en-el-jardin-domestico.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Cultura Local</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/mujer-en-el-parque-por-detras.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Viajes</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/vista-posterior-del-primer-del-brazo-que-sostiene-el-monopatin-con-el-fondo-de-la-pared-del-graffiti.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Urbano</span>
         </a>
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
-        </a>
-
-        <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/herramientas-deportivas.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Deportes</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/gente-al-aire-libre-en-la-celebracion-del-jardin-una-fiesta-de-cumpleanos-de-los-mayores.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Eventos Especiales</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/plato-de-bocadillos-de-cerveza-con-pollo-frito-con-queso-y-salchichas.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Comida</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/fotografo-joven-concentrado.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Retratos</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/salud.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Salud y Bien estar</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/Abstracto.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Musica</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/Literatura.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Literatura</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/historia.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Estaciones del año</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/musica.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Historia</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/fotoMacro.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Macro</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/tecnologia.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Abstracto</span>
+        </a>
+
+        <a class="gallery__item" href="">
+            <img class="gallery__img" src="Gallerty/estacionesAño.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Moda</span>
         </a>
 
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/cineTV.jpg" alt="" loading="lazy">
+            <span class="gallery__title">CineTV</span>
         </a>
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
-        </a>
-
-        <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/blanoYnegro.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Blanco y negro</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/cielo y espacio.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Cielo y Espacio</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/minimalismo.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Minimalismo</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/detras de ecena.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Detras de Ecenas</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/emocionesHumanas.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Emociones Humanas</span>
         </a>
 
         <a class="gallery__item" href="">
-            <img class="gallery__img" src="nav-section/ilustracion-de-la-ciudad-del-anime.jpg" alt="" loading="lazy">
-            <span class="gallery__title">Anime</span>
+            <img class="gallery__img" src="Gallerty/Reflejos.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Reflejos y Simetria</span>
+        </a>
+
+        <a class="gallery__item" href="">
+            <img class="gallery__img" src="Gallerty/moda.jpg" alt="" loading="lazy">
+            <span class="gallery__title">Tecnologia</span>
         </a>
         
     </section>
