--- a/index.html
+++ b/index.html
@@ -7,33 +7,36 @@
     <title>Gallery</title>
 </head>
 <body>
-    <header class="header">
-        <section class="header__desciption">
-            <h1 class="description__title">Galeria con las mejores imagens y mejor calidad para tu negocio</h1>
-            <p class="description__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui maiores dolores sapiente debitis voluptas dolor laudantium enim    porro modi magni, quas optio, laboriosam reiciendis temporibus nemo molestiae voluptatum illo unde.</p>
-        </section>
-    </header>
+    <div class="background__header">
+        <header class="header">
+            <section class="header__desciption">
+                <h1 class="description__title">Galeria con las mejores imagens y mejor calidad para tu negocio</h1>
+                <p class="description__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui maiores dolores sapiente debitis voluptas dolor laudantium enim    porro modi magni, quas optio, laboriosam reiciendis temporibus nemo molestiae voluptatum illo unde.</p>
+            </section>
+        </header>
+    </div>
 
     <main class="paid-plans">
         <div class="paid-plans__desc">
             <h2 class="desc__title">Obten el nivel plus</h2>
         </div>
+        <button class="btn-container__btn"><span class="btn__text">VER PLANES</span></button>
         <div class="paid-plans__benefits">
             <div class="benefits__item item1">
                 <h3 class="benefits__desc">Mejor calidad</h3>
-                <img class="benefits__img" src="asserts/auto.webp" alt="" loading="lazy">
+                <img class="benefits__img" src="asserts/calidad.webp" alt="" loading="lazy">
             </div>
             <div class="benefits__item item2">
                 <h3 class="benefits__desc">Descargas Ilimitadas</h3>
-                <img class="benefits__img" src="asserts/auto-hojas.webp" alt="" loading="lazy">
+                <img class="benefits__img" src="asserts/infinito.webp" alt="" loading="lazy">
             </div>
             <div class="benefits__item item3">
                 <h3 class="benefits__desc">Contenido exlcusivo</h3>
-                <img class="benefits__img" src="asserts/marAzul.webp" alt="" loading="lazy">
+                <img class="benefits__img" src="asserts/exclusivo.webp" alt="" loading="lazy">
             </div>
             <div class="benefits__item item4">
                 <h3 class="benefits__desc">Espacio de edicion exlcusivo</h3>
-                <img class="benefits__img img__item4" src="asserts/astronauta.webp" alt="" loading="lazy">
+                <img class="benefits__img img__item4" src="asserts/edicion.jpg" alt="" loading="lazy">
             </div>
         </div>
     </main>
